format-transformer/format-transformer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: format-transformer-deployment
  namespace: ft-backend
  labels:
    app: format-transformer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: format-transformer
  template:
    metadata:
      labels:
        app: format-transformer
    spec:
      containers:
      - name: format-transformer
        image: meksula/format-transformer:v1.0.4-lettuce
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
      restartPolicy: Always
