format-transformer/format-transformer-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ft
  name: format-transformer-service
  labels:
    app: format-transformer
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: format-transformer
